# TraceBack

./: .env  .env.example  GITHUB_BUILD_GUIDE.md  INSTALL.md  README.md  README_CROSSPLATFORM.txt  check_syntax.py  compile_core_files.py  desktop_simple.spec  docker-compose.yml  download_report.py  encrypt_core_files.py  package-lock.json  package.json  restart_backend.ps1  start.bat  发布说明.txt  快速开始.md  跨平台使用说明.txt
backend/: TraceBackDesktop.spec  TraceBackDesktop_macos.spec  check_license.js  desktop_run.py  desktop_traceback.spec  pyinstaller_log.txt  pyproject.toml  requirements.txt  run.py  traceback.spec
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  analysis.py  config_api.py  graph.py  license.py  report.py  simulation.py
backend/app/data/: licenses.json  orcaterm_cache.json
backend/app/models/: project.py
backend/app/services/: __init__.py  agent_profiles.py  graph_builder.py  graph_builder_optimized.py  license_service.py  local_graph_store.py  ontology_generator.py  ontology_generator_optimized.py  orcaterm_service.py  report_agent.py  retrospection_manager.py  retrospection_runner.py  search_engine.py  simulation_engine.py  text_processor.py
backend/app/uploads/graphs/: graph_283636fd3a13.json  graph_2f40f6de3b6a.json  graph_300860754752.json  graph_344b7fb84655.json  graph_5180a22eb5f1.json  graph_8e852efa77e1.json  graph_9188cefdb7f1.json  graph_9de5bf1e1429.json  graph_a63cac2e2c1c.json  graph_a679bf6648d6.json  (+5 more)
backend/app/utils/: file_parser.py  llm_client.py  logger.py  retry.py  smart_llm_router.py  zep_paging.py
(+25 files in other folders)
